# highlight

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog.adoc  INSTALL  README.adoc  README_DE.adoc  README_LANGLIST.adoc  README_LSP_CLIENT.adoc  README_PLUGINS.adoc  README_RELEASE.adoc  README_V4_MIGRATION.adoc  filetypes.conf  lsp.conf  makefile  meson.build  validate.sh
extras/: highlight-service.py
extras/AsciiDoc/: example_mod.asciidoc  example_mod.html
extras/eclipse-themes/: eclipse_color_themes.py
extras/pandoc/: README.html  example-preprocessed.md  example.md
extras/swig/: makefile
extras/tcl/: makefile  tclhighlight.c
gui_files/ext/: fileopenfilter.conf
gui_files/l10n/: highlight_de_DE.qm  highlight_es_ES.qm  highlight_fr_FR.qm  highlight_it_IT.qm  highlight_ja_JP.qm
langDefs/: c.lang  elm.lang  factor.lang  jam.lang  java.lang  python.lang  rst.lang  rust.lang  scala.lang  yaml.lang
man/: filetypes.conf.5  highlight.1
plugins/: mark_lines.lua
sh-completion/: gen-completions  highlight.bash  highlight.fish  highlight.zsh
src/: ci_test.sh  makefile
src/cli/: arg_parser.cc  cmdlineoptions.cpp  cmdlineoptions.h  help.cpp  main.cpp  main.h
src/core/: ansigenerator.cpp  bbcodegenerator.cpp  codegenerator.cpp  datadir.cpp  elementstyle.cpp  htmlgenerator.cpp  keystore.cpp  latexgenerator.cpp  lspclient.cpp  odtgenerator.cpp  pangogenerator.cpp  platform_fs.cpp  preformatter.cpp  rtfgenerator.cpp  stringtools.cpp  stylecolour.cpp  svggenerator.cpp  syntaxreader.cpp  texgenerator.cpp  themereader.cpp  xhtmlgenerator.cpp  xterm256generator.cpp
src/core/Diluculum/: InternalUtils.cpp  InternalUtils.hpp  LuaWrappers.cpp
src/core/astyle/: ASBeautifier.cpp  ASEnhancer.cpp  ASFormatter.cpp  ASResource.cpp  ASStreamIterator.cpp
src/gui-qt/: highlight-gui.qrc  highlight.pro  highlight.xpm  highlight_bg_BG.ts  highlight_cs_CZ.ts  highlight_de_DE.ts  highlight_es_ES.ts  highlight_fr_FR.ts  highlight_it_IT.ts  highlight_ja_JP.ts  highlight_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  showtextfile.cpp
src/include/: ansigenerator.h  bbcodegenerator.h  codegenerator.h  datadir.h  elementstyle.h  enums.h  htmlgenerator.h  keystore.h  latexgenerator.h  lspclient.h  lspprofile.h  odtgenerator.h  pangogenerator.h  preformatter.h  regexelement.h  regextoken.h  rtfgenerator.h  semantictoken.h  stringtools.h  stylecolour.h  svggenerator.h  syntaxreader.h  texgenerator.h  themereader.h  version.h  xhtmlgenerator.h  xterm256generator.h
src/include/Diluculum/: CppObject.hpp  LuaFunction.hpp  LuaUserData.hpp  LuaWrappers.hpp
src/include/astyle/: ASStreamIterator.h  astyle.h
src/include/picojson/: picojson.h
src/w32-projects/: highlight-setup-x86.iss  highlight-setup.iss
src/w32-projects/highlight_cli/: highlight_cli.pro
src/w32-projects/highlight_lib/: highlight_lib.pro
themes/: acid.theme  aiseered.theme  andes.theme  anotherdark.theme  autumn.theme  baycomb.theme  bclear.theme  biogoo.theme  bipolar.theme  blacknblue.theme  bluegreen.theme  breeze.theme  bright.theme  camo.theme  candy.theme  clarity.theme  dante.theme  darkblue.theme  darkbone.theme  darkness.theme  darkplus.theme  darkslategray.theme  darkspectrum.theme  denim.theme  duotone-dark-earth.theme  duotone-dark-forest.theme  duotone-dark-sea.theme  duotone-dark-sky.theme  duotone-dark-space.theme  dusk.theme  earendel.theme  easter.theme  edit-anjuta.theme  edit-bbedit.theme  edit-eclipse.theme  edit-emacs.theme  edit-fasm.theme  edit-flashdevelop.theme  edit-gedit.theme  edit-godot.theme  (+55 more)
themes/base16/: 3024.theme  apathy.theme  ashes.theme  atelier-cave-light.theme  atelier-cave.theme  atelier-dune-light.theme  atelier-dune.theme  atelier-estuary-light.theme  atelier-estuary.theme  atelier-forest-light.theme  atelier-forest.theme  atelier-heath-light.theme  atelier-heath.theme  atelier-lakeside-light.theme  atelier-lakeside.theme  atelier-plateau-light.theme  atelier-plateau.theme  atelier-savanna-light.theme  atelier-savanna.theme  atelier-seaside-light.theme  atelier-seaside.theme  atelier-sulphurpool-light.theme  atelier-sulphurpool.theme  bespin.theme  brewer.theme  bright.theme  brushtrees-dark.theme  brushtrees.theme  chalk.theme  circus.theme  classic-dark.theme  classic-light.theme  codeschool.theme  cupcake.theme  cupertino.theme  darktooth.theme  default-dark.theme  default-light.theme  dracula.theme  eighties.theme  (+67 more)
